--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install",
+    "postversion": "react-native-version",
+    "published": "np",
+    "build": "cd android && ./gradlew bundleRelease assembleRelease && cd .."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fifauzi/BookApp.git"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
@@ -18,17 +26,20 @@
     "intl": "^1.2.5",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-blob-util": "^0.16.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-push-notification": "^8.1.1",
-    "react-native-safe-area-context": "^4.2.4",
+    "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-share": "^7.3.7",
     "react-native-size-matters": "^0.4.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-testing-library": "^6.0.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-vector-image": "^0.3.3",
+    "react-native-version": "^4.0.0",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
@@ -38,13 +49,21 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/jest": "^28.1.6",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "husky": "^8.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ],
+    "setupFiles": [
+      "./jestSetupFile.js"
+    ]
   }
 }
